    ADDED: Useraction, Eject cd/dvd (thanks to Andrew Svet)
    ADDED: Javascript useraction, calculator
    ADDED: Javascript useraction, Mount as root
    ADDED: Javascript useraction, Recode files using GNU recode
           thanks to Vaclav Juza
    ADDED: Javascript useraction, Recode files using iconv
           thanks to Vaclav Juza
    ADDED: Useraction, (Un)Pack an ar archive (.a, .deb,...)
           thanks to Vaclav Juza
    ADDED: Useraction, Verify signature with kgpg
    ADDED: Useraction, Sign with kgpg
    ADDED: Useraction, Decrypt with kgpg
    ADDED: Useraction, Encrypt with kgpg
    ADDED: Useraction, Split large mp3 (thanks to Andrew Svet) 
    ADDED: Useraction, Archive to Dir
    ADDED: Useraction, Copy as root (thanks to Andrew Svet and MaxiPunkt)
    ADDED: Useraction, Unmount (thanks to Stefan Endrullis)
    ADDED: Useraction, Search and Replace in file
    ADDED: midnight commander keymap, thanks Alejandro Hamann
    ADDED: alpa-yellow color scheme, thanks aldo palmeri [alpa]
    ADDED: bash color scheme, thanks Alejandro Hamann
    ADDED: improved midnight commander color scheme, thanks Alejandro Hamann
    ADDED: pleasent total commander color scheme
    ADDED: dos navigator color scheme, thanks to Vovan [Koqep]

    FIXED: Eject DVD with right-click menu
    FIXED: Actionman, sometimes the command field is empty,
           patch by Vaclav Juza, thanks 
    FIXED: GCC 4.3: missing #includes thanks to Fathi Boudra
    FIXED: krpermhandler.cpp didn't compile on kde 3.2.x

     I18N: Updated French translation (thanks Tourneur Henry-Nicolas)


1.80.0 "Final 3rd Stone"
========================
    
    FIXED: searcher doesn't always find content in binary files
    FIXED: [ 1619452 ] Profile doesn't save status of sync-browse mode
    FIXED: [ 1681270 ] right clicking pops context menu immediately
    FIXED: [ 1645179 ] shortcut keys are not sent to the terminal
    FIXED: [ 1736496 ] always sort dirs by name not working
