@@ -1,3 +1,5 @@
+    ADDED: Useraction, tar.gz current (thanks to Fathi Boudra)
+    ADDED: Useraction, gzip current (thanks to Vaclav Juza)
     ADDED: Useraction, Eject cd/dvd (thanks to Andrew Svet)
     ADDED: Javascript useraction, calculator
     ADDED: Javascript useraction, Mount as root
